--- a/app.css
+++ b/app.css
@@ -12,14 +12,18 @@ body {
 
 header nav {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
   -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin: auto;
@@ -42,13 +46,17 @@ header nav ul {
   padding-left: 0;
   list-style: none;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
 }
@@ -79,6 +87,7 @@ header nav .whitepaper a {
 @media (max-width: 640px) {
   header nav {
     -webkit-box-pack: center;
+    -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
   }
@@ -115,10 +124,12 @@ body > header nav li.active {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   min-height: 100vh;
@@ -126,28 +137,35 @@ body > header nav li.active {
   color: white;
   -webkit-clip-path: ellipse(150% 50% at 50% 47%);
           clip-path: ellipse(150% 50% at 50% 47%);
-  background: url('/images/graph.svg') no-repeat,
-    linear-gradient(-45deg, #008bca 0%, #4da6cc 100%);
+  background: url('/images/graph.svg') no-repeat, -webkit-linear-gradient(135deg, #008bca 0%, #4da6cc 100%);
+  background: url('/images/graph.svg') no-repeat, -o-linear-gradient(135deg, #008bca 0%, #4da6cc 100%);
+  background: url('/images/graph.svg') no-repeat, linear-gradient(-45deg, #008bca 0%, #4da6cc 100%);
   background-position: center 160%;
-  background-size: 200vh, auto;
+  -webkit-background-size: 200vh, auto;
+          background-size: 200vh, auto;
   padding: 2em;
 }
 
 .hero > div {
   -webkit-box-flex: 1;
+  -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
+  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
 }
@@ -166,16 +184,20 @@ body > header nav li.active {
   padding-left: 0;
   list-style: none;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
+  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
 }
 
 .hero .call-to-action li {
@@ -221,16 +243,20 @@ body > header nav li.active {
 section {
   padding: 2em 0;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
+  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
 }
@@ -283,18 +309,23 @@ section.info {
 section.info .content {
   max-width: 960px;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
   -webkit-box-pack: center;
+  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
 }
@@ -320,14 +351,13 @@ section.info h2 {
 section aside {
   min-width: 300px;
   -webkit-box-flex: 1;
+  -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
 }
 
 section.info img {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  /* flex: 1; */
   margin: 2em;
   -o-object-fit: contain;
      object-fit: contain;
@@ -335,11 +365,14 @@ section.info img {
 
 section.whitepaper {
   color: white;
+  background: -webkit-linear-gradient(135deg, #008bca 0%, #4da6cc 100%);
+  background: -o-linear-gradient(135deg, #008bca 0%, #4da6cc 100%);
   background: linear-gradient(-45deg, #008bca 0%, #4da6cc 100%);
 }
 
 section.whitepaper .content {
   -webkit-box-align: start;
+  -webkit-align-items: flex-start;
       -ms-flex-align: start;
           align-items: flex-start;
 }
@@ -363,6 +396,7 @@ section.whitepaper form button[type='submit'] {
 
 section.question {
   -webkit-box-align: start;
+  -webkit-align-items: flex-start;
       -ms-flex-align: start;
           align-items: flex-start;
   max-width: 640px;
@@ -381,6 +415,7 @@ section.question abbr {
 
 section.contact .content {
   -webkit-box-align: start;
+  -webkit-align-items: flex-start;
       -ms-flex-align: start;
           align-items: flex-start;
 }
@@ -403,6 +438,7 @@ main {
   margin: auto;
   max-width: 960px;
   padding: 1em;
+  display: block; /* IE hack */
 }
 
 main h1 {
@@ -422,27 +458,29 @@ main h1:after {
 
 form {
   -webkit-box-flex: 1;
+  -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
 }
 
 form > div {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
 }
 
 form p {
-  margin: 1em 0;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  margin: 1em;
+  /* flex: 1;  Breaks in IE 11*/
 }
 
 form label {
@@ -487,16 +525,20 @@ footer {
 
 footer .content {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
   max-width: 960px;
   margin: auto;
 }
@@ -508,6 +550,7 @@ footer figure {
 footer .content > div,
 footer nav {
   -webkit-box-flex: 1;
+  -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
 }
@@ -516,12 +559,15 @@ footer nav ul {
   padding-left: 0;
   list-style: none;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
       -ms-flex-pack: end;
           justify-content: flex-end;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
 }
@@ -549,6 +595,7 @@ footer nav a:visited {
   footer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -556,12 +603,14 @@ footer nav a:visited {
   footer .content > div {
     text-align: center;
     -webkit-box-ordinal-group: 2;
+    -webkit-order: 1;
         -ms-flex-order: 1;
             order: 1;
   }
 
   footer nav ul {
     -webkit-box-pack: center;
+    -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
     margin-bottom: 2em;
@@ -575,13 +624,19 @@ footer nav a:visited {
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  display: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
+  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  visibility: hidden;
 }
 
 .modal .dialog {
